{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 24,
  "lineage": "98acc5de-eaec-2b5c-5834-d5e4ed7a347a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tcb_blog_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa477d477703122",
            "arn": "arn:aws:ec2:us-east-1:634587044713:instance/i-0ae6d4b3561f77f3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae6d4b3561f77f3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094107148207ee60f",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-44-200-199-79.compute-1.amazonaws.com",
            "public_ip": "44.200.199.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0948cb6b615dcf691",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004f9d4b9e90354d0",
            "tags": {
              "Name": "blogserver01"
            },
            "tags_all": {
              "Name": "blogserver01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02db5cf46fbe45b45"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.matte-subnet-public-1",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "matte-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:internet-gateway/igw-08e2119bfb6138935",
            "id": "igw-08e2119bfb6138935",
            "owner_id": "634587044713",
            "tags": {
              "Name": "matte-igw"
            },
            "tags_all": {
              "Name": "matte-igw"
            },
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "dependencies": [
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "matte-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:route-table/rtb-0a2ac78bfaf05a65e",
            "id": "rtb-0a2ac78bfaf05a65e",
            "owner_id": "634587044713",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e2119bfb6138935",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "matte-public-crt"
            },
            "tags_all": {
              "Name": "matte-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.matte-igw",
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "matte-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ebdbc42655d65fb",
            "route_table_id": "rtb-0a2ac78bfaf05a65e",
            "subnet_id": "subnet-004f9d4b9e90354d0"
          },
          "dependencies": [
            "aws_internet_gateway.matte-igw",
            "aws_route_table.matte-public-crt",
            "aws_subnet.matte-subnet-public-1",
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "matte-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fada62bc9d1dd213",
            "route_table_id": "rtb-0a2ac78bfaf05a65e",
            "subnet_id": "subnet-0f776b0e8c03e5a9f"
          },
          "dependencies": [
            "aws_internet_gateway.matte-igw",
            "aws_route_table.matte-public-crt",
            "aws_subnet.matte-subnet-public-2",
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:security-group/sg-02db5cf46fbe45b45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02db5cf46fbe45b45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230613021516880800000001",
            "name_prefix": "terraform-",
            "owner_id": "634587044713",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "matte-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:subnet/subnet-021fb945ead6c76e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021fb945ead6c76e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634587044713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matte-subnet-private-1"
            },
            "tags_all": {
              "Name": "matte-subnet-private-1"
            },
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "dependencies": [
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "matte-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:subnet/subnet-0ef03680e3903bd52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef03680e3903bd52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634587044713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "matte-subnet-private-2"
            },
            "tags_all": {
              "Name": "matte-subnet-private-2"
            },
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "dependencies": [
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "matte-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:subnet/subnet-004f9d4b9e90354d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004f9d4b9e90354d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634587044713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-public-1"
            },
            "tags_all": {
              "Name": "prod-subnet-public-1"
            },
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "dependencies": [
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "matte-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:subnet/subnet-0f776b0e8c03e5a9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f776b0e8c03e5a9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634587044713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-public-2"
            },
            "tags_all": {
              "Name": "prod-subnet-public-2"
            },
            "vpc_id": "vpc-0ce296b3896974fa0"
          },
          "dependencies": [
            "aws_vpc.matte-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "matte-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634587044713:vpc/vpc-0ce296b3896974fa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4c43c34dea5eaf3",
            "default_route_table_id": "rtb-06c0fac5f69f2997e",
            "default_security_group_id": "sg-0bf85c48d9824eda5",
            "dhcp_options_id": "dopt-0165ab1e05d6574a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce296b3896974fa0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c0fac5f69f2997e",
            "owner_id": "634587044713",
            "tags": {
              "Name": "matte-vpc"
            },
            "tags_all": {
              "Name": "matte-vpc"
            }
          }
        }
      ]
    }
  ]
}